started antonym cases -->  not working :(

--- a/notebooks/case_5_president.ipynb
+++ b/notebooks/case_5_president.ipynb
@@ -35,19 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EleutherAI/gpt-j-6B ==> device: cuda:0, memory: 12219206136\n"
+      "facebook/galactica-6.7b ==> device: cuda:0, memory: 13314719744\n"
      ]
     }
    ],
    "source": [
-    "MODEL_NAME = \"EleutherAI/gpt-j-6B\" # \"facebook/galactica-6.7b\"  # gpt2-{medium,large,xl} or EleutherAI/gpt-j-6B\n",
+    "MODEL_NAME = \"facebook/galactica-6.7b\" # \"EleutherAI/gpt-j-6B\"\n",
     "n_embd_field = \"hidden_size\"\n",
     "\n",
     "mt = model_utils.ModelAndTokenizer(MODEL_NAME, low_cpu_mem_usage=True, torch_dtype=torch.float16)\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        " 'Joe Biden']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,85 +132,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Richard M. Nixon was succeeded by Gerald R. Ford\n",
-      "Woodrow Wilson was succeeded by Warren G. Harding\n",
-      "James Carter was succeeded by Ronald Reagan\n",
-      "{} was succeeded by\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "relation_prompt = \"was succeeded by\"\n",
-    "prev_presidents = random.sample(range(len(presidents)-1), k = 3)\n",
+    "# relation_prompt = \"was succeeded by\"\n",
+    "# prev_presidents = random.sample(range(len(presidents)-1), k = 3)\n",
     "\n",
-    "icl_prompt = \"\"\n",
-    "for p in prev_presidents:\n",
-    "    icl_prompt += f\"{presidents[p]} {relation_prompt} {presidents[p+1]}\\n\"\n",
-    "icl_prompt += \"{} \" + relation_prompt\n",
-    "print(icl_prompt)"
+    "# icl_prompt = \"\"\n",
+    "# for p in prev_presidents:\n",
+    "#     icl_prompt += f\"{presidents[p]} {relation_prompt} {presidents[p+1]}\\n\"\n",
+    "# icl_prompt += \"{} \" + relation_prompt\n",
+    "# print(icl_prompt)\n",
+    "\n",
+    "icl_prompt = \"\"\"Richard M. Nixon was succeeded by Gerald R. Ford\n",
+    "Woodrow Wilson was succeeded by Warren G. Harding\n",
+    "James Carter was succeeded by Ronald Reagan\n",
+    "{} was succeeded by\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "George Washington >> John Adams ===> [(' John', 0.5504), (' George', 0.0637), (' James', 0.0466), (' William', 0.0405), (' Thomas', 0.0375)] :: True\n",
-      "John Adams >> Thomas Jefferson ===> [(' John', 0.5808), (' Thomas', 0.1492), (' James', 0.1009), (' George', 0.0524), (' Benjamin', 0.0165)] :: False\n",
-      "Thomas Jefferson >> James Madison ===> [(' James', 0.5005), (' John', 0.2328), (' Andrew', 0.0926), (' Martin', 0.033), (' George', 0.0223)] :: True\n",
-      "James Madison >> James Monroe ===> [(' James', 0.5485), (' John', 0.1168), (' Thomas', 0.0841), (' William', 0.0828), (' George', 0.0345)] :: True\n",
-      "James Monroe >> John Quincy Adams ===> [(' John', 0.7057), (' Andrew', 0.0677), (' William', 0.0544), (' James', 0.0465), (' Thomas', 0.0346)] :: True\n",
-      "John Quincy Adams >> Andrew Jackson ===> [(' Andrew', 0.2332), (' John', 0.1845), (' Martin', 0.1415), (' William', 0.1288), (' James', 0.0722)] :: True\n",
-      "Andrew Jackson >> Martin Van Buren ===> [(' Martin', 0.7347), (' John', 0.092), (' William', 0.0622), (' James', 0.0285), (' Bill', 0.0137)] :: True\n",
-      "Martin Van Buren >> William Henry Harrison ===> [(' William', 0.5409), (' John', 0.0804), (' James', 0.057), (' Martin', 0.0561), (' Andrew', 0.0411)] :: True\n",
-      "William Henry Harrison >> John Tyler ===> [(' Benjamin', 0.5494), (' John', 0.3034), (' William', 0.0656), (' Andrew', 0.0104), (' Martin', 0.0085)] :: False\n",
-      "John Tyler >> James K. Polk ===> [(' William', 0.3463), (' James', 0.21), (' Martin', 0.161), (' Mill', 0.104), (' Andrew', 0.0232)] :: False\n",
-      "James K. Polk >> Zachary Taylor ===> [(' James', 0.1961), (' Zach', 0.1961), (' William', 0.1458), (' Franklin', 0.0844), (' Martin', 0.0688)] :: False\n",
-      "Zachary Taylor >> Millard Fillmore ===> [(' U', 0.2742), (' Mill', 0.2345), (' Abraham', 0.2238), (' Andrew', 0.0641), (' John', 0.0333)] :: False\n",
-      "Millard Fillmore >> Franklin Pierce ===> [(' Franklin', 0.2949), (' Zach', 0.2369), (' Martin', 0.0988), (' William', 0.0988), (' Abraham', 0.0885)] :: True\n",
-      "Franklin Pierce >> James Buchanan ===> [(' James', 0.4738), (' Abraham', 0.0773), (' Chester', 0.0738), (' John', 0.0693), (' Martin', 0.0593)] :: True\n",
-      "James Buchanan >> Abraham Lincoln ===> [(' Abraham', 0.7852), (' William', 0.0828), (' Andrew', 0.0345), (' Franklin', 0.0171), (' Gro', 0.0171)] :: True\n",
-      "Abraham Lincoln >> Andrew Johnson ===> [(' Andrew', 0.468), (' James', 0.0921), (' U', 0.0718), (' William', 0.0429), (' Lyndon', 0.0355)] :: True\n",
-      "Andrew Johnson >> Ulysses S. Grant ===> [(' U', 0.6674), (' Lyndon', 0.0822), (' Abraham', 0.0726), (' Martin', 0.0218), (' Rutherford', 0.0215)] :: True\n",
-      "Ulysses S. Grant >> Rutherford B. Hayes ===> [(' Rutherford', 0.5431), (' Chester', 0.1417), (' Gro', 0.082), (' Andrew', 0.0649), (' William', 0.0446)] :: True\n",
-      "Rutherford B. Hayes >> James Garfield ===> [(' James', 0.2148), (' U', 0.1699), (' Benjamin', 0.1365), (' William', 0.1344), (' Rutherford', 0.0815)] :: True\n",
-      "James Garfield >> Chester A. Arthur ===> [(' Chester', 0.9773), (' William', 0.0064), (' Arthur', 0.0043), (' Andrew', 0.0035), (' Rutherford', 0.0019)] :: True\n",
-      "Chester A. Arthur >> Grover Cleveland ===> [(' Gro', 0.8232), (' William', 0.0854), (' Benjamin', 0.0391), (' Theodore', 0.0188), (' Chester', 0.0104)] :: True\n",
-      "Grover Cleveland >> Benjamin Harrison ===> [(' Benjamin', 0.9271), (' William', 0.0447), (' Theodore', 0.0044), (' James', 0.0033), (' Calvin', 0.0028)] :: True\n",
-      "Benjamin Harrison >> Grover Cleveland ===> [(' William', 0.7008), (' Gro', 0.154), (' Benjamin', 0.0402), (' Calvin', 0.0184), (' Chester', 0.0157)] :: False\n",
-      "Grover Cleveland >> William McKinley ===> [(' Benjamin', 0.9271), (' William', 0.0447), (' Theodore', 0.0044), (' James', 0.0033), (' Calvin', 0.0028)] :: False\n",
-      "William McKinley >> Theodore Roosevelt ===> [(' William', 0.5135), (' Theodore', 0.3999), (' Benjamin', 0.0313), (' Gro', 0.0148), (' Teddy', 0.0064)] :: False\n",
-      "Theodore Roosevelt >> William Howard Taft ===> [(' William', 0.7518), (' Calvin', 0.1413), (' Franklin', 0.0245), (' Herbert', 0.0151), (' his', 0.0073)] :: True\n",
-      "William Howard Taft >> Woodrow Wilson ===> [(' Calvin', 0.2776), (' William', 0.1849), (' Theodore', 0.1176), (' Herbert', 0.0916), (' Wood', 0.0475)] :: False\n",
-      "Woodrow Wilson >> Warren G. Harding ===> [(' Calvin', 0.2261), (' Franklin', 0.1102), (' Warren', 0.0988), (' Harry', 0.0858), (' James', 0.0581)] :: False\n",
-      "Warren G. Harding >> Calvin Coolidge ===> [(' Calvin', 0.8961), (' Herbert', 0.0192), (' John', 0.0126), (' Franklin', 0.0122), (' James', 0.0083)] :: True\n",
-      "Calvin Coolidge >> Herbert Hoover ===> [(' Herbert', 0.8366), (' Warren', 0.0645), (' Charles', 0.0423), (' Calvin', 0.0291), (' John', 0.0076)] :: True\n",
-      "Herbert Hoover >> Franklin D. Roosevelt ===> [(' Franklin', 0.3398), (' Jimmy', 0.1532), (' Calvin', 0.1394), (' Richard', 0.0638), (' John', 0.0563)] :: True\n",
-      "Franklin D. Roosevelt >> Harry S. Truman ===> [(' Harry', 0.3467), (' John', 0.1256), (' Dwight', 0.1236), (' Herbert', 0.0963), ('\\n', 0.0318)] :: True\n",
-      "Harry S. Truman >> Dwight D. Eisenhower ===> [(' Dwight', 0.8381), (' John', 0.0411), (' D', 0.0171), (' Richard', 0.0151), (' Bill', 0.014)] :: True\n",
-      "Dwight D. Eisenhower >> John F. Kennedy ===> [(' John', 0.6009), (' Richard', 0.2013), (' Gerald', 0.0256), (' Jimmy', 0.0222), (' Bill', 0.0222)] :: True\n",
-      "John F. Kennedy >> Lyndon B. Johnson ===> [(' Lyndon', 0.8652), (' Richard', 0.0733), (' Barack', 0.0123), (' Gerald', 0.0058), (' John', 0.0057)] :: True\n",
-      "Lyndon B. Johnson >> Richard M. Nixon ===> [(' Richard', 0.8871), (' Jimmy', 0.0449), (' John', 0.0157), (' Hu', 0.0117), (' Gerald', 0.0044)] :: True\n",
-      "Richard M. Nixon >> Gerald R. Ford ===> [(' Gerald', 0.4281), (' Jimmy', 0.2637), (' George', 0.1152), (' Ronald', 0.0357), (' James', 0.0261)] :: True\n",
-      "Gerald R. Ford >> James Carter ===> [(' Jimmy', 0.846), (' Richard', 0.0378), (' James', 0.0303), (' George', 0.0259), ('\\n', 0.0077)] :: False\n",
-      "James Carter >> Ronald Reagan ===> [(' Jimmy', 0.3724), (' George', 0.2258), (' Bill', 0.1307), (' William', 0.0386), (' Ronald', 0.0352)] :: False\n",
-      "Ronald Reagan >> George H. W. Bush ===> [(' George', 0.7171), (' Bill', 0.1083), (' Barack', 0.0411), (' William', 0.0234), (' Jimmy', 0.0163)] :: True\n",
-      "George H. W. Bush >> William J. Clinton ===> [(' Bill', 0.8261), (' William', 0.0971), (' George', 0.0459), (' Clinton', 0.0063), (' Barack', 0.0028)] :: False\n",
-      "William J. Clinton >> George W. Bush ===> [(' George', 0.82), (' Barack', 0.1059), (' Bill', 0.0318), (' Donald', 0.0105), (' William', 0.0074)] :: True\n",
-      "George W. Bush >> Barack Obama ===> [(' Barack', 0.7891), (' Bill', 0.1329), (' George', 0.0122), (' Donald', 0.0099), (' Barr', 0.0065)] :: True\n",
-      "Barack Obama >> Donald Trump ===> [(' Donald', 0.9808), (' Barack', 0.0034), (' Trump', 0.0028), (' Hillary', 0.0017), (' George', 0.0012)] :: True\n",
-      "Donald Trump >> Joe Biden ===> [(' Barack', 0.2214), (' Donald', 0.1385), (' Hillary', 0.1301), (' Bill', 0.0967), (' Mike', 0.0359)] :: False\n"
+      "George Washington >> John Adams ===> [(' Abraham', 0.4851), (' Theod', 0.1306), (' Thomas', 0.0683), (' John', 0.0371), (' Dw', 0.0312)] :: False\n",
+      "John Adams >> Thomas Jefferson ===> [(' Ly', 0.1379), (' John', 0.1041), (' Harry', 0.0798), (' Theod', 0.0786), (' Franklin', 0.0773)] :: False\n",
+      "Thomas Jefferson >> James Madison ===> [(' James', 0.1458), (' Theod', 0.1277), (' George', 0.0986), (' John', 0.0986), (' Abraham', 0.0898)] :: True\n",
+      "James Madison >> James Monroe ===> [(' Abraham', 0.1854), (' Theod', 0.1586), (' John', 0.0977), (' Wood', 0.0732), (' William', 0.0693)] :: False\n",
+      "James Monroe >> John Quincy Adams ===> [(' Theod', 0.2141), (' Harry', 0.1309), (' William', 0.1219), (' Herbert', 0.106), (' Cal', 0.0459)] :: False\n",
+      "John Quincy Adams >> Andrew Jackson ===> [(' Theod', 0.1938), (' William', 0.1261), (' Franklin', 0.0967), (' Herbert', 0.0629), (' Ly', 0.062)] :: False\n",
+      "Andrew Jackson >> Martin Van Buren ===> [(' Bill', 0.2067), (' Ly', 0.1177), (' John', 0.0714), (' Jimmy', 0.0682), (' Andrew', 0.0531)] :: False\n",
+      "Martin Van Buren >> William Henry Harrison ===> [(' Herbert', 0.1642), (' G', 0.1483), (' Franklin', 0.1372), (' Dw', 0.1183), (' William', 0.0706)] :: False\n",
+      "William Henry Harrison >> John Tyler ===> [(' Benjamin', 0.3325), (' Theod', 0.1204), (' John', 0.0847), (' Abraham', 0.0686), (' Thomas', 0.0649)] :: False\n",
+      "John Tyler >> James K. Polk ===> [(' Ly', 0.2051), (' William', 0.1097), (' Theod', 0.0809), (' George', 0.0487), (' Richard', 0.044)] :: False\n",
+      "James K. Polk >> Zachary Taylor ===> [(' Franklin', 0.2416), (' Theod', 0.142), (' William', 0.1366), (' Herbert', 0.115), (' Harry', 0.0465)] :: False\n",
+      "Zachary Taylor >> Millard Fillmore ===> [(' Donald', 0.3997), (' Bill', 0.2969), (' George', 0.1627), (' John', 0.0191), (' Bar', 0.0112)] :: False\n",
+      "Millard Fillmore >> Franklin Pierce ===> [(' Franklin', 0.3328), (' Herbert', 0.1987), (' Theod', 0.0861), (' Ad', 0.0687), (' Harry', 0.0514)] :: True\n",
+      "Franklin Pierce >> James Buchanan ===> [(' G', 0.2373), (' Richard', 0.1848), (' Harry', 0.1231), (' George', 0.1095), (' Dw', 0.0724)] :: False\n",
+      "James Buchanan >> Abraham Lincoln ===> [(' Dw', 0.1573), (' Harry', 0.109), (' Herbert', 0.1016), (' Bill', 0.0955), (' William', 0.0715)] :: False\n",
+      "Abraham Lincoln >> Andrew Johnson ===> [(' Andrew', 0.1239), (' Theod', 0.1173), (' Dw', 0.0914), (' John', 0.0782), (' William', 0.0643)] :: True\n",
+      "Andrew Johnson >> Ulysses S. Grant ===> [(' Bill', 0.4299), (' George', 0.1558), (' Ly', 0.1122), (' Jimmy', 0.0713), (' Richard', 0.0526)] :: False\n",
+      "Ulysses S. Grant >> Rutherford B. Hayes ===> [(' Dw', 0.2079), (' William', 0.1428), (' Herbert', 0.1311), (' Theod', 0.0937), (' Harry', 0.0724)] :: False\n",
+      "Rutherford B. Hayes >> James Garfield ===> [(' Herbert', 0.3464), (' William', 0.1151), (' George', 0.0889), (' Dw', 0.0791), (' Theod', 0.0385)] :: False\n",
+      "James Garfield >> Chester A. Arthur ===> [(' Chester', 0.2783), (' William', 0.1561), (' Herbert', 0.1188), (' Harry', 0.0574), (' Abraham', 0.0371)] :: True\n",
+      "Chester A. Arthur >> Grover Cleveland ===> [(' George', 0.28), (' Herbert', 0.1176), (' Dw', 0.1131), (' Jimmy', 0.0625), (' Harry', 0.0538)] :: False\n",
+      "Grover Cleveland >> Benjamin Harrison ===> [(' William', 0.3098), (' Benjamin', 0.1938), (' Thomas', 0.079), (' Herbert', 0.0736), (' Franklin', 0.0348)] :: False\n",
+      "Benjamin Harrison >> Grover Cleveland ===> [(' William', 0.194), (' John', 0.1205), (' George', 0.0708), (' Theod', 0.0697), (' Cal', 0.0606)] :: False\n",
+      "Grover Cleveland >> William McKinley ===> [(' William', 0.3098), (' Benjamin', 0.1938), (' Thomas', 0.079), (' Herbert', 0.0736), (' Franklin', 0.0348)] :: True\n",
+      "William McKinley >> Theodore Roosevelt ===> [(' Theod', 0.3462), (' Warren', 0.1624), (' Harry', 0.0883), (' Herbert', 0.0693), (' G', 0.0385)] :: True\n",
+      "Theodore Roosevelt >> William Howard Taft ===> [(' Franklin', 0.6206), (' William', 0.1364), (' Harry', 0.0747), (' Herbert', 0.0724), (' Wood', 0.018)] :: False\n",
+      "William Howard Taft >> Woodrow Wilson ===> [(' Herbert', 0.3203), (' Wood', 0.1489), (' Harry', 0.1064), (' Theod', 0.0785), (' Franklin', 0.0588)] :: False\n",
+      "Woodrow Wilson >> Warren G. Harding ===> [(' Franklin', 0.1511), (' Herbert', 0.1511), (' Harry', 0.1022), (' John', 0.0754), (' Richard', 0.0719)] :: False\n",
+      "Warren G. Harding >> Calvin Coolidge ===> [(' George', 0.3201), (' Richard', 0.1853), (' Herbert', 0.1399), (' Walter', 0.0338), (' Harry', 0.0322)] :: False\n",
+      "Calvin Coolidge >> Herbert Hoover ===> [(' Herbert', 0.7891), (' Dw', 0.0318), (' Harry', 0.0316), (' Richard', 0.0222), (' Franklin', 0.0219)] :: True\n",
+      "Herbert Hoover >> Franklin D. Roosevelt ===> [(' Franklin', 0.3201), (' Dw', 0.2676), (' Harry', 0.063), (' Herbert', 0.0583), (' William', 0.0535)] :: True\n",
+      "Franklin D. Roosevelt >> Harry S. Truman ===> [(' Harry', 0.8599), (' Dw', 0.0431), (' Theod', 0.0132), (' John', 0.0115), (' William', 0.0081)] :: True\n",
+      "Harry S. Truman >> Dwight D. Eisenhower ===> [(' George', 0.2974), (' Dw', 0.2927), (' Walter', 0.0788), (' Bill', 0.0788), (' Richard', 0.0339)] :: False\n",
+      "Dwight D. Eisenhower >> John F. Kennedy ===> [(' George', 0.5156), (' Richard', 0.2184), (' John', 0.1356), (' Harry', 0.0178), (' Jimmy', 0.0161)] :: False\n",
+      "John F. Kennedy >> Lyndon B. Johnson ===> [(' Ly', 0.8521), (' Richard', 0.0562), (' Bill', 0.014), (' Jimmy', 0.0129), (' George', 0.0101)] :: True\n",
+      "Lyndon B. Johnson >> Richard M. Nixon ===> [(' Richard', 0.6294), (' Bill', 0.059), (' Jimmy', 0.0481), (' G', 0.0347), (' George', 0.0297)] :: True\n",
+      "Richard M. Nixon >> Gerald R. Ford ===> [(' G', 0.7061), (' George', 0.1049), (' Ronald', 0.0341), (' Jimmy', 0.0225), (' Harry', 0.0158)] :: True\n",
+      "Gerald R. Ford >> James Carter ===> [(' George', 0.519), (' Jimmy', 0.194), (' Ronald', 0.0471), (' Richard', 0.0319), (' John', 0.0188)] :: False\n",
+      "James Carter >> Ronald Reagan ===> [(' George', 0.5376), (' Jimmy', 0.1614), (' Ronald', 0.0662), (' Bill', 0.058), (' Walter', 0.0428)] :: False\n",
+      "Ronald Reagan >> George H. W. Bush ===> [(' George', 0.9517), (' Bill', 0.009), (' Richard', 0.0049), (' Jimmy', 0.004), (' Walter', 0.004)] :: True\n",
+      "George H. W. Bush >> William J. Clinton ===> [(' Bill', 0.5039), (' George', 0.3862), (' Donald', 0.0116), (' Richard', 0.0108), (' Jimmy', 0.0094)] :: False\n",
+      "William J. Clinton >> George W. Bush ===> [(' Bill', 0.4741), (' George', 0.4385), (' Al', 0.028), (' Bar', 0.0056), (' Donald', 0.0047)] :: False\n",
+      "George W. Bush >> Barack Obama ===> [(' Bill', 0.5581), (' George', 0.2617), (' Donald', 0.0462), (' Bar', 0.0327), (' Dick', 0.0097)] :: False\n",
+      "Barack Obama >> Donald Trump ===> [(' Donald', 0.6533), (' Joe', 0.1481), (' Bill', 0.0536), (' George', 0.0292), (' John', 0.0153)] :: True\n",
+      "Donald Trump >> Joe Biden ===> [(' Joe', 0.5098), (' Mike', 0.1309), (' Donald', 0.0729), (' Bill', 0.0628), (' George', 0.0242)] :: True\n"
      ]
     }
    ],
@@ -231,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31"
+       "15"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
