--- a/notebooks/discriminate_j.ipynb
+++ b/notebooks/discriminate_j.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "from src import models\n",
     "\n",
-    "device = \"cuda:4\"\n",
+    "device = \"cuda:5\"\n",
     "mt = models.load_model(\"gptj\", device=device)"
    ]
   },
@@ -373,90 +373,32 @@
    "id": "cc5d1ddf",
    "metadata": {},
    "source": [
-    "Prototyping below..."
+    "What if we condition on J's accuracy?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5867d416",
+   "id": "736f6f6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from easydict import EasyDict\n",
-    "from collections import defaultdict\n",
+    "PAIRS_BY_CATEGORY = {\n",
+    "    \"language\": LANGUAGES,\n",
+    "    \"capitol\": CAPITOLS,\n",
+    "    \"north\": BORDER_NORTH,\n",
+    "}\n",
     "\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "\n",
-    "dists = defaultdict(list)\n",
-    "\n",
-    "for ops1, ops2 in tqdm((\n",
-    "    (ops_capitols, ops_languages),\n",
-    "    (ops_capitols, ops_capitols),\n",
-    "    (ops_languages, ops_capitols),\n",
-    "    (ops_languages, ops_languages),\n",
-    ")):\n",
-    "    for (p1, s1), o1 in ops1.items():\n",
-    "        dists_by_p = defaultdict(list)\n",
-    "        for (p2, s2), o2 in ops2.items():\n",
-    "            if p1 == p2:\n",
-    "                continue\n",
-    "\n",
-    "            dist = o1[0].weight.sub(o2[0].weight).norm()\n",
-    "            dists_by_p[p2].append(dist.item())\n",
-    "        \n",
-    "        for p2, ds in dists_by_p.items():\n",
-    "            dists[p1, s1].append((p2, np.mean(ds)))"
+    "def compute_accuracy(category, prompt, subject):\n",
+    "    operator = CATEGORIES[category][prompt, subject]\n",
+    "    dataset = [x for x in PAIRS_BY_CATEGORY[category] if x[0] != subject]\n",
+    "    n_correct = 0\n",
+    "    for s, t in dataset:\n",
+    "        os = [o[0].lower().strip() for o in operator(s, device=device)]\n",
+    "        n_correct += any(t.lower().strip().startswith(o) for o in os)\n",
+    "    return n_correct / len(dataset)\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7e0740f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for (p, s), ds in dists.items():\n",
-    "    best = max(ds, key=lambda xyz: xyz[-1])\n",
-    "    print(p, \"/\", s, \"/\", best)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa5cef2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "for (p, s), ds in dists.items():\n",
-    "    if p not in {k[0] for k in ops_capitols}:\n",
-    "        continue\n",
-    "\n",
-    "    ordered = sorted(ds, key=lambda xyz: xyz[-1])\n",
-    "    colors = [\"b\" if x[0] in {k[0] for k in ops_capitols} else \"g\" for x in ordered]\n",
-    "    values = [x[-1] for x in ordered]\n",
-    "    prompts = [x[0] for x in ordered]\n",
-    "\n",
-    "    plt.figure()\n",
-    "    sns.barplot(x=np.arange(len(values)), y=values, palette=colors)\n",
-    "\n",
-    "#     print(f\"legend ({p}):\")\n",
-    "#     for i, prompt in enumerate(prompts):\n",
-    "#         print(i + 1, prompt)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "874dd570",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
