--- a/notebooks/case_3_comperative.ipynb
+++ b/notebooks/case_3_comperative.ipynb
@@ -1080,7 +1080,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "relation",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1094,9 +1094,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.10"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "4104f34302edfbfea7294aa0a5e7d82342a152e8e30f6673f70b28d5f99d4ac0"
