--- a/notebooks/causal_tracing_v2.ipynb
+++ b/notebooks/causal_tracing_v2.ipynb
@@ -404,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "relation",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -418,9 +418,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.10"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
