Move some stuff around.

--- a/notebooks/layer_search.ipynb
+++ b/notebooks/layer_search.ipynb
@@ -147,8 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils.layer_selection import interpret_logits, logit_lens\n",
-    "from src.utils.supplimentary import untuple\n",
+    "from src.utils.layer_selection import interpret_logits, logit_lens, _untuple\n",
     "\n",
     "prompt = \"The Space Needle is located in the city of\"\n",
     "tokenized = mt.tokenizer(prompt, return_tensors=\"pt\", padding=True).to(mt.model.device)\n",
@@ -176,7 +175,7 @@
     ")\n",
     "int_tokenized.input_ids\n",
     "\n",
-    "z = untuple(traces[models.determine_layer_paths(mt)[-1]].output)[0][-1]\n",
+    "z = _untuple(traces[models.determine_layer_paths(mt)[-1]].output)[0][-1]\n",
     "print(z.shape)\n",
     "\n",
     "logit_lens(mt, z, [t[0] for t in int_tokenized.input_ids], get_proba=False)"
@@ -885,13 +884,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils.supplimentary import visualize_matrix\n",
+    "from src.utils.viz_utils import matrix_heatmap\n",
     "\n",
     "for layer_name in models.determine_layer_paths(mt)[:24]:\n",
     "    j = np.load(f\"layer_sweep/weights_and_biases/{layer_name}.npz\", allow_pickle=True)[\"jacobian\"]\n",
     "    j = torch.tensor(j).to(device)\n",
     "    print(layer_name, j.shape)\n",
-    "    visualize_matrix(j, title = layer_name, save_path=f\"layer_sweep/Jacobian_plots/{layer_name}.png\")"
+    "    matrix_heatmap(j, title = layer_name, save_path=f\"layer_sweep/Jacobian_plots/{layer_name}.png\")"
    ]
   },
   {
