--- a/notebooks/layer_search.ipynb
+++ b/notebooks/layer_search.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils.layer_selection import interpret_logits, logit_lens, _untuple\n",
+    "from src.lens import interpret_logits, logit_lens, _untuple\n",
     "\n",
     "prompt = \"The Space Needle is located in the city of\"\n",
     "tokenized = mt.tokenizer(prompt, return_tensors=\"pt\", padding=True).to(mt.model.device)\n",
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils.layer_selection import layer_c_measure\n",
+    "from src.lens import layer_c_measure\n",
     "\n",
     "# relation_prompt = mt.tokenizer.eos_token + \" {} is located in the city of\"\n",
     "# subject = \"The Space Needle\"\n",
