--- a/notebooks/layer_search.ipynb
+++ b/notebooks/layer_search.ipynb
@@ -373,8 +373,8 @@
     "    h_layer=12,\n",
     ")\n",
     "\n",
-    "operator = estimator.call_on_sample(\n",
-    "    sample = RelationSample(subject=\"United States\", object=\"Washington\"),\n",
+    "operator = estimator.estimate_for_subject(\n",
+    "    subject = \"United States\",\n",
     "    prompt_template= icl_prompt\n",
     ")"
    ]
@@ -403,9 +403,9 @@
     "            mt=mt,\n",
     "            h_layer=h_layer,\n",
     "        )\n",
-    "        operator = estimator.call_on_sample(\n",
-    "            # sample = RelationSample(subject=\"Russia\", object=\"Moscow\"),\n",
-    "            sample = sample,\n",
+    "        operator = estimator.estimate_for_subject(\n",
+    "            # subject = \"Russia\",\n",
+    "            subject = sample.subject,\n",
     "            prompt_template= icl_prompt\n",
     "        )\n",
     "\n",
