--- a/notebooks/layer_search.ipynb
+++ b/notebooks/layer_search.ipynb
@@ -461,7 +461,7 @@
          "metadata": {},
          "outputs": [],
          "source": [
-            "from src.utils.layer_selection import causal_tracing"
+            "from src.lens import causal_tracing"
          ]
       },
       {
