Fix embedding baseline.

--- a/notebooks/layer_search.ipynb
+++ b/notebooks/layer_search.ipynb
@@ -147,7 +147,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.lens import interpret_logits, logit_lens, _untuple\n",
+    "from src.lens import interpret_logits, logit_lens\n",
+    "from src.functional import untuple\n",
     "\n",
     "prompt = \"The Space Needle is located in the city of\"\n",
     "tokenized = mt.tokenizer(prompt, return_tensors=\"pt\", padding=True).to(mt.model.device)\n",
@@ -175,7 +176,7 @@
     ")\n",
     "int_tokenized.input_ids\n",
     "\n",
-    "z = _untuple(traces[models.determine_layer_paths(mt)[-1]].output)[0][-1]\n",
+    "z = untuple(traces[models.determine_layer_paths(mt)[-1]].output)[0][-1]\n",
     "print(z.shape)\n",
     "\n",
     "logit_lens(mt, z, [t[0] for t in int_tokenized.input_ids], get_proba=False)"
