Update attribute lens to make example figure.

--- a/notebooks/attributelens.ipynb
+++ b/notebooks/attributelens.ipynb
@@ -24,7 +24,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from src import models, data\n",
-    "from src.metrics import recall"
+    "from src.metrics import recall\n",
+    "from src.attributelens.attributelens import Attribute_Lens\n",
+    "import src.attributelens.utils as lens_utils\n",
+    "from src.operators import JacobianIclMeanEstimator\n",
+    "import plotly.graph_objects as go\n"
    ]
   },
   {
@@ -44,12 +48,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = data.load_dataset()\n",
-    "print('\\n'.join([d.name for d in dataset]))\n",
-    "datums =[d for d in dataset if d.name == \"country capital city\"][0]\n",
-    "print(datums)\n",
-    "# capital_cities.__dict__.keys()\n",
-    "len(datums.samples)"
+    "lens = Attribute_Lens(mt=mt, top_k=10)\n",
+    "att_info = lens.apply_attribute_lens(\n",
+    "    prompt=\" Bill Bradley was a\",\n",
+    "    relation_operator=None # operator\n",
+    ")\n",
+    "#att_info['subject_range'] = (8, 13)\n",
+    "print('prediction:', att_info['nextwords'][-1])\n",
+    "p = lens_utils.visualize_attribute_lens(\n",
+    "    att_info, layer_skip=3, must_have_layers=[],\n",
+    ")\n",
+    "\n",
+    "p.write_image('bill_bradley_lens.pdf')\n",
+    "p"
    ]
   },
   {
@@ -58,28 +69,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indices = np.random.choice(range(len(datums.samples)), 3, replace=False)\n",
+    "dataset = data.load_dataset()\n",
+    "print('\\n'.join([d.name for d in dataset]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datums =[d for d in dataset if d.name == \"plays pro sport\"][0]\n",
+    "#print(datums)\n",
+    "print(len(datums.samples))\n",
+    "\n",
+    "np.random.seed(4)\n",
+    "indices = np.random.choice(range(len(datums.samples)), 5, replace=False)\n",
     "samples = [datums.samples[i] for i in indices]\n",
     "\n",
     "training_samples = copy.deepcopy(datums.__dict__)\n",
     "training_samples[\"samples\"] = samples\n",
     "training_samples = data.Relation(**training_samples)\n",
     "\n",
-    "training_samples.samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.operators import JacobianIclMeanEstimator\n",
+    "print(training_samples.samples)\n",
     "\n",
     "mean_estimator = JacobianIclMeanEstimator(\n",
     "    mt=mt,\n",
-    "    h_layer=12,\n",
-    "    bias_scale_factor=0.2       # so that the bias doesn't knock out the prediction too much in the direction of training examples\n",
+    "    h_layer=15,\n",
+    "    bias_scale_factor=0.5       # so that the bias doesn't knock out the prediction too much in the direction of training examples\n",
     ") \n",
     "\n",
     "operator = mean_estimator(training_samples)"
@@ -91,7 +108,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "operator(\"United States\", k = 10).predictions"
+    "lens = Attribute_Lens(mt=mt, top_k=10)\n",
+    "att_info = lens.apply_attribute_lens(\n",
+    "    prompt=\" Bill Bradley was a\",\n",
+    "    relation_operator=operator,\n",
+    ")\n",
+    "#att_info['subject_range'] = (8, 13)\n",
+    "print('prediction:', att_info['nextwords'][-1])\n",
+    "p = lens_utils.visualize_attribute_lens(\n",
+    "    att_info, layer_skip=3, must_have_layers=[], colorscale='greens'\n",
+    ")\n",
+    "p.write_image('bill_bradley_sport.pdf')\n",
+    "p"
    ]
   },
   {
@@ -100,29 +128,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_samples = list(set(datums.samples) - set(training_samples.samples))\n",
+    "datums =[d for d in dataset if d.name == \"person went to university\"][0]\n",
+    "mean_estimator = JacobianIclMeanEstimator(\n",
+    "    mt=mt,\n",
+    "    h_layer=15,\n",
+    "    bias_scale_factor=0.5       # so that the bias doesn't knock out the prediction too much in the direction of training examples\n",
+    ") \n",
     "\n",
-    "predictions = []\n",
-    "target = []\n",
+    "np.random.seed(8)\n",
+    "indices = np.random.choice(range(len(datums.samples)), 5, replace=False)\n",
+    "#indices = np.array([ 1, 20,  3,  7,  0])\n",
     "\n",
-    "for sample in test_samples:\n",
-    "    cur_predictions = operator(sample.subject, k = 5).predictions\n",
-    "    predictions.append([\n",
-    "        p.token for p in cur_predictions\n",
-    "    ])\n",
-    "    target.append(sample.object)\n",
+    "samples = [datums.samples[i] for i in indices]\n",
     "\n",
-    "recall(predictions, target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.attributelens.attributelens import Attribute_Lens\n",
-    "import src.attributelens.utils as lens_utils"
+    "training_samples = copy.deepcopy(datums.__dict__)\n",
+    "training_samples[\"samples\"] = samples\n",
+    "training_samples = data.Relation(**training_samples)\n",
+    "\n",
+    "training_samples.samples\n",
+    "operator2 = mean_estimator(training_samples)\n"
    ]
   },
   {
@@ -133,25 +157,16 @@
    "source": [
     "lens = Attribute_Lens(mt=mt, top_k=10)\n",
     "att_info = lens.apply_attribute_lens(\n",
-    "    prompt=\"Germany, Germany, Germany. Canberra is the capital of the country of\",\n",
-    "    relation_operator=operator\n",
+    "    prompt=\" Bill Bradley was a\",\n",
+    "    relation_operator=operator2,\n",
     ")\n",
-    "print('prediction:', att_info['nextwords'][-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import plotly.graph_objs as go\n",
-    "    \n",
-    "f = lens_utils.visualize_attribute_lens(\n",
-    "    att_info, layer_skip=2, must_have_layers=[15, 25],\n",
-    "    # expected_answers=[' Beijing']\n",
+    "#att_info['subject_range'] = (8, 13)\n",
+    "print('prediction:', att_info['nextwords'][-1])\n",
+    "p = lens_utils.visualize_attribute_lens(\n",
+    "    att_info, layer_skip=3, must_have_layers=[], colorscale='oranges'\n",
     ")\n",
-    "f"
+    "p.write_image('bill_bradley_school.pdf')\n",
+    "p"
    ]
   }
  ],
